Fix running tempo formatting

--- a/running-tempo-playlist.html
+++ b/running-tempo-playlist.html
@@ -132,65 +132,71 @@ miles). Enjoy!</p>
 <h2>Hills (120-140 BPM)</h2>
 <p>Most of these songs also make great sprints! I sprint during the
 chorus, when the songs tend to get faster.</p>
-<p>120 BPM     3:43    &quot;Papi&quot; by Jennifer Lopez
-124 BPM     3:49    &quot;Time of Our Lives&quot; by Pitbull
-128 BPM     4:31    &quot;Clarity&quot; by Zedd
-128 BPM     3:38    &quot;Beautiful Now&quot; by Zedd
-136 BPM     3:42    &quot;Jai Ho!&quot; by A.R. Rahman, The Pussycat Dolls</p>
+<ul class="simple">
+<li>120 BPM     3:43    &quot;Papi&quot; by Jennifer Lopez</li>
+<li>124 BPM     3:49    &quot;Time of Our Lives&quot; by Pitbull</li>
+<li>128 BPM     4:31    &quot;Clarity&quot; by Zedd</li>
+<li>128 BPM     3:38    &quot;Beautiful Now&quot; by Zedd</li>
+<li>136 BPM     3:42    &quot;Jai Ho!&quot; by A.R. Rahman, The Pussycat Dolls</li>
+</ul>
 </div>
 <div class="section" id="mid-tempo-140-160-bpm">
 <h2>Mid-Tempo (140-160 BPM)</h2>
 <p>These are great for when you want to have a slower day, or are just
 warming up / cooling down.</p>
-<p>140 BPM     4:08    &quot;50 Ways to Say Goodbye&quot; by Train
-140 BPM     3:13    &quot;Up All Night&quot; by One Direction
-142 BPM     3:38    &quot;Geronimo&quot; by Sheppard
-148 BPM     3:43    &quot;Mr. Brightside&quot; by The Killers
-148 BPM     3:32    &quot;Animal&quot; by Neon Trees
-149 BPM     2:48    &quot;All The Small Things&quot; by blink-182
-150 BPM     4:12    &quot;Dog Days are Over&quot; by Florence + The Machine
-150 BPM     2:50    &quot;Don't Stop&quot; by 5 Seconds of Summer
-150 BPM     3:19    &quot;Bang Bang&quot; by Jessie J, Ariana Grande, Nicki Minaj
-150 BPM     3:32    &quot;Uma Thurman&quot; by Fall Out Boy
-150 BPM     3:02    &quot;Moving in the Dark&quot; by Neon Trees
-150 BPM     3:21    &quot;Love In The 21st Century&quot; by Neon Trees
-152 BPM     3:12    &quot;Bring it Back&quot; by Shy Carter
-152 BPM     4:45    &quot;Spaceman&quot; by The Killers
-153 BPM     3:43    &quot;1983&quot; by Neon Trees
-153 BPM     2:48    &quot;See You Go&quot; by 3OH!3
-153 BPM     3:05    &quot;Even If I'm Loud It Doesn't Mean I'm Talking To You&quot; by Tove Styrke
-155 BPM     2:57    &quot;Everybody Talks&quot; by Neon Trees</p>
+<ul class="simple">
+<li>140 BPM     4:08    &quot;50 Ways to Say Goodbye&quot; by Train</li>
+<li>140 BPM     3:13    &quot;Up All Night&quot; by One Direction</li>
+<li>142 BPM     3:38    &quot;Geronimo&quot; by Sheppard</li>
+<li>148 BPM     3:43    &quot;Mr. Brightside&quot; by The Killers</li>
+<li>148 BPM     3:32    &quot;Animal&quot; by Neon Trees</li>
+<li>149 BPM     2:48    &quot;All The Small Things&quot; by blink-182</li>
+<li>150 BPM     4:12    &quot;Dog Days are Over&quot; by Florence + The Machine</li>
+<li>150 BPM     2:50    &quot;Don't Stop&quot; by 5 Seconds of Summer</li>
+<li>150 BPM     3:19    &quot;Bang Bang&quot; by Jessie J, Ariana Grande, Nicki Minaj</li>
+<li>150 BPM     3:32    &quot;Uma Thurman&quot; by Fall Out Boy</li>
+<li>150 BPM     3:02    &quot;Moving in the Dark&quot; by Neon Trees</li>
+<li>150 BPM     3:21    &quot;Love In The 21st Century&quot; by Neon Trees</li>
+<li>152 BPM     3:12    &quot;Bring it Back&quot; by Shy Carter</li>
+<li>152 BPM     4:45    &quot;Spaceman&quot; by The Killers</li>
+<li>153 BPM     3:43    &quot;1983&quot; by Neon Trees</li>
+<li>153 BPM     2:48    &quot;See You Go&quot; by 3OH!3</li>
+<li>153 BPM     3:05    &quot;Even If I'm Loud It Doesn't Mean I'm Talking To You&quot; by Tove Styrke</li>
+<li>155 BPM     2:57    &quot;Everybody Talks&quot; by Neon Trees</li>
+</ul>
 </div>
 <div class="section" id="fast-tempo-160-180-bpm">
 <h2>Fast-Tempo (160-180 BPM)</h2>
 <p>The push-yourself, all-out songs. This is where the real work out is!</p>
-<p>160 BPM     3:04    &quot;Dear Future Husband&quot; by Megan Trainor
-160 BPM     3:22    &quot;She Looks So Perfect&quot; by 5 Seconds of Summer
-160 BPM     2:58    &quot;Back for You&quot; by One Direction
-160 BPM     3:39    &quot;Shake It Off&quot; by Taylor Swift
-160 BPM     3:01    &quot;Smash Into You&quot; by Hey Violet
-160 BPM     2:45    &quot;Kendall Drive&quot; by The Polar Boys
-162 BPM     3:27    &quot;Work It Out&quot; by Knox Hamilton
-162 BPM     2:46    &quot;The Middle&quot; by Jimmy Eat World
-162 BPM     3:49    &quot;Sugar, We're Going Down&quot; by Fall Out Boy
-162 BPM     3:29    &quot;Tightrope&quot; by WALK THE MOON
-162 BPM     3:09    &quot;Rollercoaster&quot; by Bleachers
-164 BPM     3:16    &quot;Magic&quot; by B.O.B
-164 BPM     3:18    &quot;I Can Feel It&quot; by Hey Violet
-164 BPM     2:28    &quot;Runaway Baby&quot; by Bruno Mars
-165 BPM     2:58    &quot;Silhouettes&quot; by Colony House
-166 BPM     3:20    &quot;I'm Into You&quot; by Jennifer Lopez
-166 BPM     3:32    &quot;How Far We've Come&quot; by Matchbox Twenty
-167 BPM     3:40    &quot;Check Yes, Juliet&quot; by We The Kings
-168 BPM     3:11    &quot;She's Not Afraid&quot; by One Direction
-170 BPM     3:21    &quot;Golden Daze&quot; by Doc Robinson
-170 BPM     3:16    &quot;La La Land&quot; by Demi Lovato
-172 BPM     3:13    &quot;Hey Mama&quot; by David Guetta, Nicki Minaj
-172 BPM     2:51    &quot;London Queen&quot; by Charli XCX
-173 BPM     3:14    &quot;Candyman&quot; by Christina Aguilera
-174 BPM     3:47    &quot;Footloose&quot; by Kenny Loggins
-180 BPM     3:03    &quot;Kiss You&quot; by One Direction
-181 BPM     3:03    &quot;Dear Maria, Count Me In&quot; by All Time Low</p>
+<ul class="simple">
+<li>160 BPM     3:04    &quot;Dear Future Husband&quot; by Megan Trainor</li>
+<li>160 BPM     3:22    &quot;She Looks So Perfect&quot; by 5 Seconds of Summer</li>
+<li>160 BPM     2:58    &quot;Back for You&quot; by One Direction</li>
+<li>160 BPM     3:39    &quot;Shake It Off&quot; by Taylor Swift</li>
+<li>160 BPM     3:01    &quot;Smash Into You&quot; by Hey Violet</li>
+<li>160 BPM     2:45    &quot;Kendall Drive&quot; by The Polar Boys</li>
+<li>162 BPM     3:27    &quot;Work It Out&quot; by Knox Hamilton</li>
+<li>162 BPM     2:46    &quot;The Middle&quot; by Jimmy Eat World</li>
+<li>162 BPM     3:49    &quot;Sugar, We're Going Down&quot; by Fall Out Boy</li>
+<li>162 BPM     3:29    &quot;Tightrope&quot; by WALK THE MOON</li>
+<li>162 BPM     3:09    &quot;Rollercoaster&quot; by Bleachers</li>
+<li>164 BPM     3:16    &quot;Magic&quot; by B.O.B</li>
+<li>164 BPM     3:18    &quot;I Can Feel It&quot; by Hey Violet</li>
+<li>164 BPM     2:28    &quot;Runaway Baby&quot; by Bruno Mars</li>
+<li>165 BPM     2:58    &quot;Silhouettes&quot; by Colony House</li>
+<li>166 BPM     3:20    &quot;I'm Into You&quot; by Jennifer Lopez</li>
+<li>166 BPM     3:32    &quot;How Far We've Come&quot; by Matchbox Twenty</li>
+<li>167 BPM     3:40    &quot;Check Yes, Juliet&quot; by We The Kings</li>
+<li>168 BPM     3:11    &quot;She's Not Afraid&quot; by One Direction</li>
+<li>170 BPM     3:21    &quot;Golden Daze&quot; by Doc Robinson</li>
+<li>170 BPM     3:16    &quot;La La Land&quot; by Demi Lovato</li>
+<li>172 BPM     3:13    &quot;Hey Mama&quot; by David Guetta, Nicki Minaj</li>
+<li>172 BPM     2:51    &quot;London Queen&quot; by Charli XCX</li>
+<li>173 BPM     3:14    &quot;Candyman&quot; by Christina Aguilera</li>
+<li>174 BPM     3:47    &quot;Footloose&quot; by Kenny Loggins</li>
+<li>180 BPM     3:03    &quot;Kiss You&quot; by One Direction</li>
+<li>181 BPM     3:03    &quot;Dear Maria, Count Me In&quot; by All Time Low</li>
+</ul>
 </div>
 
 </div>
