--- a/archives.html
+++ b/archives.html
@@ -116,6 +116,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>06.3.2018</dt>
+    <dd><a href="http://blog.lucywyman.me/summer-reads-2018.html">Summer Reads 2018</a></dd>
     <dt>06.1.2018</dt>
     <dd><a href="http://blog.lucywyman.me/summer-bucket-list-2018.html">Summer Bucket List 2018</a></dd>
     <dt>05.22.2018</dt>
