Add oscon content

--- a/my-bucket-list.html
+++ b/my-bucket-list.html
@@ -136,17 +136,15 @@ narrator.</li>
 bucket list, which I later realized reveals how in my heart of
 hearts, my deepest, truest self is a total square. So! Here is my very
 boring bucket list:</p>
-<ol class="arabic simple">
-<li>Become a Senior Software Engineer</li>
-<li>Get a doggo</li>
-<li>Become financially independent (read: not need to work)</li>
-<li>Speak a little Spanish every day</li>
-<li>Bake cinnamon rolls (or maybe just eat a lot of cinnamon rolls...)</li>
-<li>Visit Boston</li>
-<li>Get married and have a family</li>
-<li>Be an extra in a film or a contestant on a game show</li>
-<li>Fly first class</li>
-</ol>
+<p>☐  Become a Senior Software Engineer
+☐  Get a doggo
+☐  Become financially independent (read: not need to work)
+☐  Speak a little Spanish every day
+☐  Bake cinnamon rolls (or maybe just eat a lot of cinnamon rolls...)
+☐  Visit Boston
+☐  Get married and have a family
+☐  Be an extra in a film or a contestant on a game show
+☐  Fly first class</p>
 <p>This honestly feels more like a list of long-term goals or a checklist
 than a fun list of adventures (with a few exceptions, like eating a
 lot of cinnamon rolls). Initially I was panicked by my apparent lack
