Add reading lately September 2018 post

--- a/my-bucket-list.html
+++ b/my-bucket-list.html
@@ -137,7 +137,7 @@ bucket list, which I later realized reveals how in my heart of
 hearts, my deepest, truest self is a total square. So! Here is my very
 boring bucket list:</p>
 <p>☐  Become a Senior Software Engineer
-☐  Get a doggo
+☑  Get a doggo
 ☐  Become financially independent (read: not need to work)
 ☐  Speak a little Spanish every day
 ☐  Bake cinnamon rolls (or maybe just eat a lot of cinnamon rolls...)
