--- a/summer-bucket-list-2018.html
+++ b/summer-bucket-list-2018.html
@@ -127,7 +127,10 @@ what adventures await us in the coming months! Ok, enough sun-crazed
 excitement for now, let's peek at what we'll be up to this year:</p>
 <p>☑  Go on a 5 mile hike</p>
 <p>☑  Go berry picking</p>
-<p>☐  Ride the Seattle Ferris Wheel</p>
+<p>☑  Ride the Seattle Ferris Wheel (We didn't technically do this
+because we got there and realized it was $14 per person to ride, which
+we just couldn't stomach. But I'm giving us credit for going out
+there).</p>
 <p>☑  Make s'mores</p>
 <p>☑  Host a barbecue</p>
 <p>☑  Go to Shakespeare in the park OR a movie in the park</p>
