--- a/archives.html
+++ b/archives.html
@@ -116,8 +116,12 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>09.20.2018</dt>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-september-2018.html">Reading Lately: September 2018</a></dd>
+    <dt>08.20.2018</dt>
+    <dd><a href="http://blog.lucywyman.me/fall-bucket-list-2018.html">Fall Bucket List 2018</a></dd>
     <dt>08.10.2018</dt>
-    <dd><a href="http://blog.lucywyman.me/reading-lately-august-2018.html">What I've Been Reading Lately</a></dd>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-august-2018.html">Reading Lately: August 2018</a></dd>
     <dt>08.4.2018</dt>
     <dd><a href="http://blog.lucywyman.me/on-being-taken-care-of.html">On Being Taken Care Of</a></dd>
     <dt>07.20.2018</dt>
