--- a/archives.html
+++ b/archives.html
@@ -117,12 +117,18 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>10.14.2018</dt>
+    <dd><a href="http://blog.lucywyman.me/amsterdam-2018.html">Amsterdam 2018</a></dd>
+    <dt>10.14.2018</dt>
+    <dd><a href="http://blog.lucywyman.me/puppetize-live-2018.html">Puppetize Live 2018</a></dd>
     <dt>10.3.2018</dt>
     <dd><a href="http://blog.lucywyman.me/favorite-places-seattle.html">My Favorite Places in Seattle</a></dd>
     <dt>09.20.2018</dt>
     <dd><a href="http://blog.lucywyman.me/reading-lately-september-2018.html">Reading Lately: September 2018</a></dd>
     <dt>08.20.2018</dt>
     <dd><a href="http://blog.lucywyman.me/fall-bucket-list-2018.html">Fall Bucket List 2018</a></dd>
+    <dt>08.18.2018</dt>
+    <dd><a href="http://blog.lucywyman.me/seattle-bucket-list.html">Seattle Bucket List</a></dd>
     <dt>08.10.2018</dt>
     <dd><a href="http://blog.lucywyman.me/reading-lately-august-2018.html">Reading Lately: August 2018</a></dd>
     <dt>08.4.2018</dt>
