Add reading lately October 2018

--- a/archives.html
+++ b/archives.html
@@ -117,6 +117,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>10.28.2018</dt>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-october-2018.html">Reading Lately: October 2018</a></dd>
     <dt>10.14.2018</dt>
     <dd><a href="http://blog.lucywyman.me/amsterdam-2018.html">Amsterdam 2018</a></dd>
     <dt>10.14.2018</dt>
