--- a/fall-bucket-list-2018.html
+++ b/fall-bucket-list-2018.html
@@ -117,6 +117,7 @@ ga('send', 'pageview');
 <div class='article'>
 <h2>Fall Bucket List 2018</h2>
 <p>08.20.2018</p>
+<img alt="" src="/theme/images/vampire-halloween-card.jpg" style="height: 400px;">
 <p>It feels early to be thinking about fall, but with Labor Day just 2
 weekends away crisp apples and crisp mornings have been on my mind
 lately. I also completed my seasonal bucket list for the first time
