--- a/japanuary-2018-initial-observations.html
+++ b/japanuary-2018-initial-observations.html
@@ -117,6 +117,7 @@ ga('send', 'pageview');
 <div class='article'>
 <h2>Japanuary 2018: Initial Observations</h2>
 <p>01.29.2018</p>
+<img alt="" src="/theme/images/red-pagoda.jpg" style="height: 400px;">
 <p>We're currently in the air somewhere between Tokyo and LA, on our way back from
 a 3½ week stay in Japan. In a word the trip was <em>amazing</em>, but like most
 international travel there were a lot more nuanced ups and downs, interesting
