--- a/reading-lately-october-2018.html
+++ b/reading-lately-october-2018.html
@@ -117,6 +117,7 @@ ga('send', 'pageview');
 <div class='article'>
 <h2>Reading Lately: October 2018</h2>
 <p>10.28.2018</p>
+<img alt="" src="/theme/images/reading-lately-october-2018.jpg" style="height: 400px;">
 <p>My lucky-book-streak continues this month, with some truly fantastic
 fiction and a small dash of self-help. I also just got about 9 books
 in from the library all at the same time, so am looking forward to
