--- a/favorite-places-seattle.html
+++ b/favorite-places-seattle.html
@@ -117,6 +117,7 @@ ga('send', 'pageview');
 <div class='article'>
 <h2>My Favorite Places in Seattle</h2>
 <p>10.3.2018</p>
+<img alt="" src="/theme/images/pike-place-seattle.jpg" style="height: 400px;">
 <div class="section" id="places">
 <h2>Places</h2>
 <div class="section" id="kubota-garden">
