--- a/archives.html
+++ b/archives.html
@@ -114,6 +114,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>12.29.2018</dt>
+    <dd><a href="http://blog.lucywyman.me/reflections-on-2018.html">Reflections on 2018</a></dd>
     <dt>12.3.2018</dt>
     <dd><a href="http://blog.lucywyman.me/reading-lately-november-2018.html">Reading Lately: November 2018</a></dd>
     <dt>11.24.2018</dt>
