Add 19 for 2019 and Reading Lately December posts

--- a/archives.html
+++ b/archives.html
@@ -114,6 +114,10 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>01.1.2019</dt>
+    <dd><a href="http://blog.lucywyman.me/19-for-2019.html">19 for 2019</a></dd>
+    <dt>01.1.2019</dt>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-december-2018.html">Reading Lately: December 2018</a></dd>
     <dt>12.29.2018</dt>
     <dd><a href="http://blog.lucywyman.me/reflections-on-2018.html">Reflections on 2018</a></dd>
     <dt>12.3.2018</dt>
