Add reading lately February

--- a/archives.html
+++ b/archives.html
@@ -118,6 +118,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>03.1.2019</dt>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-february-2019.html">Reading Lately: February 2019</a></dd>
     <dt>02.28.2019</dt>
     <dd><a href="http://blog.lucywyman.me/hawaii-2019.html">Hawaii Vacation 2019</a></dd>
     <dt>02.1.2019</dt>
