Add march reading lately

--- a/archives.html
+++ b/archives.html
@@ -121,6 +121,8 @@ ga('send', 'pageview');
 <dl>
     <dt>04.13.2019</dt>
     <dd><a href="http://blog.lucywyman.me/prompting-for-sudo-in-travis.html">Promting for Sudo Password in Travis</a></dd>
+    <dt>03.31.2019</dt>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-march-2019.html">Reading Lately: March 2019</a></dd>
     <dt>03.8.2019</dt>
     <dd><a href="http://blog.lucywyman.me/spring-bucket-list-2019.html">Spring Bucket List 2019</a></dd>
     <dt>03.1.2019</dt>
