--- a/spring-bucket-list-2019.html
+++ b/spring-bucket-list-2019.html
@@ -134,7 +134,7 @@ are. Until then, we'll be making the most of our last spring in SEA!</p>
 <li>Go to a garage sale</li>
 <li>See the Seattle Japanese Garden</li>
 <li>Cook a meal entirely from Farmer's Market finds</li>
-<li>Move to Portland!!!</li>
+<li>~Move to Portland!!!~</li>
 </ul>
 <p>Keeping it short and sweet this season - we've got a busy few months
 ahead of us, and I don't want to get overwhelmed. Just whelmed.
