--- a/archives.html
+++ b/archives.html
@@ -119,6 +119,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>05.7.2019</dt>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-april-2019.html">Reading Lately: April 2019</a></dd>
     <dt>04.13.2019</dt>
     <dd><a href="http://blog.lucywyman.me/prompting-for-sudo-in-travis.html">Promting for Sudo Password in Travis</a></dd>
     <dt>03.31.2019</dt>
