--- a/archives.html
+++ b/archives.html
@@ -119,6 +119,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>07.2.2019</dt>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-june-2019.html">Reading Lately: June 2019</a></dd>
     <dt>06.2.2019</dt>
     <dd><a href="http://blog.lucywyman.me/reading-lately-may-2019.html">Reading Lately: May 2019</a></dd>
     <dt>06.2.2019</dt>
