--- a/archives.html
+++ b/archives.html
@@ -161,6 +161,8 @@ ga('send', 'pageview');
     <dd><a href="http://blog.lucywyman.me/amsterdam-2018.html">Amsterdam 2018</a></dd>
     <dt>10.14.2018</dt>
     <dd><a href="http://blog.lucywyman.me/puppetize-live-2018.html">Puppetize Live 2018</a></dd>
+    <dt>10.6.2018</dt>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-july-2019.html">Reading Lately: July 2019</a></dd>
     <dt>10.3.2018</dt>
     <dd><a href="http://blog.lucywyman.me/favorite-places-seattle.html">My Favorite Places in Seattle</a></dd>
     <dt>09.20.2018</dt>
