Add reflections on 2019

--- a/archives.html
+++ b/archives.html
@@ -104,6 +104,10 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>01.1.2020</dt>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-december-2019.html">Reading Lately: December 2019</a></dd>
+    <dt>12.29.2019</dt>
+    <dd><a href="http://blog.lucywyman.me/reflections-on-2019.html">Reflections on 2019</a></dd>
     <dt>12.9.2019</dt>
     <dd><a href="http://blog.lucywyman.me/reading-lately-november-2019.html">Reading Lately: November 2019</a></dd>
     <dt>11.1.2019</dt>
@@ -144,8 +148,6 @@ ga('send', 'pageview');
     <dd><a href="http://blog.lucywyman.me/19-for-2019.html">19 for 2019</a></dd>
     <dt>01.1.2019</dt>
     <dd><a href="http://blog.lucywyman.me/reading-lately-december-2018.html">Reading Lately: December 2018</a></dd>
-    <dt>01.1.2019</dt>
-    <dd><a href="http://blog.lucywyman.me/reading-lately-december-2019.html">Reading Lately: December 2019</a></dd>
     <dt>12.29.2018</dt>
     <dd><a href="http://blog.lucywyman.me/reflections-on-2018.html">Reflections on 2018</a></dd>
     <dt>12.3.2018</dt>
