--- a/archives.html
+++ b/archives.html
@@ -104,6 +104,8 @@ ga('send', 'pageview');
 <h1>Archives for blog</h1>
 
 <dl>
+    <dt>01.5.2020</dt>
+    <dd><a href="http://blog.lucywyman.me/20-for-2020.html">20 for 2020</a></dd>
     <dt>01.1.2020</dt>
     <dd><a href="http://blog.lucywyman.me/reading-lately-december-2019.html">Reading Lately: December 2019</a></dd>
     <dt>12.29.2019</dt>
