Finished sub-7 minute mile

--- a/20-for-2020.html
+++ b/20-for-2020.html
@@ -143,7 +143,7 @@ these last kid-less years as much as I can.</p>
 feel how it's starting to affect my posture and shoulders.</li>
 <li>Submit a crossword to the NYT</li>
 <li>Go to at least 5 spanish meetups</li>
-<li>Run a sub-7 minute mile</li>
+<li><span class="strike">Run a sub-7 minute mile</span></li>
 <li><span class="strike">Sign up for my own health insurance</span></li>
 <li>Get a new bike</li>
 <li>Host board games with friends at least 3 times</li>
