--- a/archives.html
+++ b/archives.html
@@ -118,6 +118,8 @@ ga('send', 'pageview');
     <dd><a href="http://blog.lucywyman.me/cancun-2020.html">Cancun 2020</a></dd>
     <dt>03.18.2020</dt>
     <dd><a href="http://blog.lucywyman.me/reading-lately-february-2020.html">Reading Lately: February 2020</a></dd>
+    <dt>01.11.2020</dt>
+    <dd><a href="http://blog.lucywyman.me/reading-lately-july-2020.html">Reading Lately: July 2020</a></dd>
     <dt>01.5.2020</dt>
     <dd><a href="http://blog.lucywyman.me/20-for-2020.html">20 for 2020</a></dd>
     <dt>01.1.2020</dt>
